--- a/dockerfiles/Dockerfile-ssh
+++ b/dockerfiles/Dockerfile-ssh
@@ -6,6 +6,11 @@ RUN mkdir /var/run/sshd /root/.ssh /projects
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd && \
     sed -i "s/.*AuthorizedKeysFile.*/AuthorizedKeysFile\t\~\/.ssh\/authorized_keys/g" /etc/ssh/sshd_config
 
+#SSH CUDA fix
+
+RUN echo "export PATH=$PATH" >> /etc/profile && \
+    echo "ldconfig" >> /etc/profile
+
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 
